FCPPT-25 (fix): fix video being covered by infobox on mobile

--- a/src/jwplayer/players/MobileArticleVideoPlayer/mobileArticleVideoPlayer.module.scss
+++ b/src/jwplayer/players/MobileArticleVideoPlayer/mobileArticleVideoPlayer.module.scss
@@ -2,7 +2,8 @@
 	width: 100%;
 	height: 56.25vw;
 	position: relative;
-	z-index: 100;
+	// must be bigger than infobox button
+	z-index: 101;
 }
 
 .mobileArticleVideoWrapperIsScrollPlayer {
